--- a/○HAPPY DRIVE/style.css
+++ b/○HAPPY DRIVE/style.css
@@ -20,18 +20,12 @@ video{
   height: 80vh;
 }
 .introduction{
-  margin: 32px 0 0 0;
+  position: relative;
+  top: 32px;
   clear: both;
+  height: 400px;
 }
-/* .introduction li:before{
-  content: "";
-  width: 10px;
-  height: 10px;
-  display: inline-block;
-  background-color: #E68600;
-  margin: 0 10px 0 0;
-  border-radius: 50px;
-} */
+
 
 .shop_appeal{
   margin: 16PX 8% 0 8%;
@@ -119,9 +113,7 @@ position: relative;
 top: 45px;
 }
 
-.insta_wrap{
-  margin: 32px 0 0 0;
-}
+
 
 .home_pao img,
 .home_figaro img{
